--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- searchbar start -->
 
 
-<form>
+{{!-- <form>
     <div class="bg-white py-3 sm:py-4 lg:py-8">
         <div class="max-w-screen-2xl px-4 md:px-8 mx-auto">
     <div class="flex pb-6">
@@ -31,7 +31,7 @@
             </button>
         </div>
     </div>
-</form>
+</form> --}}
 
 <!-- searchbar end -->
 
@@ -102,7 +102,7 @@
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-x-4 md:gap-x-6 gap-y-8">
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="http://localhost:3001/api/games/eldenring" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
             <img src="../assets/img/EldenRing.jpeg" loading="lazy" alt="Elden Ring cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
   
             <div class="flex gap-2 absolute left-0 bottom-2">
@@ -127,7 +127,7 @@
   
         <!-- product - start -->
         <div>
-          <a href="#" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
+          <a href="http://localhost:3001/api/games/hogwarts" class="group h-96 block bg-gray-100 rounded-lg overflow-hidden shadow-lg relative mb-2 lg:mb-3">
             <img src="../assets/img/HL.jpg" loading="lazy" alt="Hogwarts Legacy cover art" class="w-full h-full object-cover object-center group-hover:scale-110 transition duration-200" />
 
             <div class="flex gap-2 absolute left-2 bottom-2">
