--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,41 +1,61 @@
-<form class="login-form">
+<form class="signup-form">
         <div class="h-full bg-gradient-to-tl from-orange-400 to-rose-900 w-full py-16 px-4">
             <div class="flex flex-col items-center justify-center">
-            <div class="bg-white shadow rounded lg:w-1/3  md:w-1/2 w-full p-10 mt-16">          
-            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-              <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
-                  Create an account
-              </h1>
-              <form class="space-y-4 md:space-y-6" action="#">
-                <div>
-                    <label for="username" class="block mb-2 text-sm font-medium text-gray-900 ">Your username</label>
-                    <input type="username" name="username" id="username" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
+                <div class="flex align-middle items-center gap-4">
+                <svg width="95" height="94" viewBox="0 0 85 94" class="w-4 h-auto text-indigo-500" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M96 0V47L48 94H0V47L48 0H96Z"/>
+                </svg>
+                <p class="text-white text-2xl md:text-2xl font-bold gap-3">The Gamelist <i data-fa-symbol="gamepad" class="fa-solid fa-gamepad fa-lg"></i></p>
                 </div>
-                  <div>
-                      <label for="email" class="block mb-2 text-sm font-medium text-gray-900 ">Your email</label>
-                      <input type="email" name="email" id="email" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="name@company.com" required="">
-                  </div>
-                  <div>
-                      <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Password</label>
-                      <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                  </div>
-                  <div>
-                      <label for="confirm-password" class="block mb-2 text-sm font-medium text-gray-900">Confirm password</label>
-                      <input type="confirm-password" name="confirm-password" id="confirm-password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
-                  </div>
-                  <div class="flex items-start">
-                      <div class="flex items-center h-5">
-                        <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">
-                      </div>
-                      <div class="ml-3 text-sm">
-                        <label for="terms" class="font-light text-gray-500">I accept the <a class="font-medium text-primary-600 hover:underline dark:text-primary-500" href="#">Terms and Conditions</a></label>
-                      </div>
-                  </div>
-                  <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create an account</button>
-                  <p class="text-sm font-light text-gray-500">
-                      Already have an account? <a href="http://localhost:3001/login" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login here</a>
-                  </p>
-              </form>
-          </div>
-          </div>
-      </div>
+                <div class="bg-white shadow rounded lg:w-1/3  md:w-1/2 w-full p-10 mt-16">
+                    <p tabindex="0" class="focus:outline-none text-2xl font-extrabold leading-6 text-gray-800">Sign up for an account</p>
+                    <p tabindex="0" class="focus:outline-none text-sm mt-4 font-medium leading-none text-gray-500">Have an account? <a href="http://localhost:3001/login"   class="hover:text-gray-500 focus:text-gray-500 focus:outline-none focus:underline hover:underline text-sm font-medium leading-none  text-gray-800 cursor-pointer"> Log in here</a></p>
+                    <button aria-label="Continue with google" role="button" class="focus:outline-none focus:ring-2 focus:ring-offset-1 focus:ring-gray-700 py-3.5 px-4 border rounded-lg border-gray-700 flex items-center w-full mt-10">
+                       <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/sign_in-svg2.svg" alt="google">
+                        <p class="text-base font-medium ml-4 text-gray-700">Continue with Google</p>
+                    </button>
+                    <button aria-label="Continue with github" role="button" class="focus:outline-none  focus:ring-2 focus:ring-offset-1 focus:ring-gray-700 py-3.5 px-4 border rounded-lg border-gray-700 flex items-center w-full mt-4">
+                       <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/sign_in-svg3.svg" alt="github">                            
+                        <p class="text-base font-medium ml-4 text-gray-700">Continue with Github</p>
+                    </button>
+                    <button aria-label="Continue with twitter" role="button" class="focus:outline-none  focus:ring-2 focus:ring-offset-1 focus:ring-gray-700 py-3.5 px-4 border rounded-lg border-gray-700 flex items-center w-full mt-4">
+                       <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/sign_in-svg4.svg" alt="twitter">                            
+                        <p class="text-base font-medium ml-4 text-gray-700">Continue with Twitter</p>
+                    </button>
+                    <div class="w-full flex items-center justify-between py-5">
+                         <hr class="w-full bg-gray-400">
+                         <p class="text-base font-medium leading-4 px-2.5 text-gray-400">OR</p>
+                         <hr class="w-full bg-gray-400  ">
+                        </div>
+                        <div>
+                            <label id="username" class="text-sm font-medium leading-none text-gray-800">
+                                Username
+                            </label>
+                            <input id="username-create" aria-labelledby="username" type="username" class="bg-gray-200 border rounded  text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"/>
+                        </div>
+                        <div>
+                            <label id="email" class="text-sm font-medium leading-none text-gray-800">
+                                Email
+                            </label>
+                            <input id="email-create" aria-labelledby="email" type="email" class="bg-gray-200 border rounded  text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"/>
+                        </div>
+                        <div class="mt-6  w-full">
+                            <label for="pass" class="text-sm font-medium leading-none text-gray-800">
+                                Password
+                            </label>
+                           <div class="relative flex items-center justify-center">
+                            <input id="password-create" type="password" class="bg-gray-200 border rounded  text-xs font-medium leading-none text-gray-800 py-3 w-full pl-3 mt-2"/>
+                            <div class="absolute right-0 mt-2 mr-3 cursor-pointer">
+                              <img src="https://tuk-cdn.s3.amazonaws.com/can-uploader/sign_in-svg5.svg" alt="viewport">                                    
+                            </div>
+                           </div>
+                        </div>
+                        <div class="mt-8">
+                            <button role="button" class="focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 text-sm font-semibold leading-none text-white focus:outline-none bg-indigo-700 border rounded hover:bg-indigo-600 py-4 w-full">Sign Up</button>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+<script src="/js/signup.js"></script>
